# Minecraft2

./: .gitignore  CMakeLists.txt
include/: camera.hpp  chunk.h  chunk.hpp  gamedata.hpp  loader.hpp  player.hpp  worldGenerator.hpp
include/shaders/: shaders.h
shaders/: base.frag  base.vert
src/: Shader.cpp  chunk.cpp  main.cpp
